@@ -31,5 +31,6 @@
 static ngx_int_t    ngx_http_push_stream_channels_statistics_handler(ngx_http_request_t *r);
 static ngx_int_t    ngx_http_push_stream_publisher_handler(ngx_http_request_t *r);
 static void         ngx_http_push_stream_publisher_body_handler(ngx_http_request_t *r);
+static void         ngx_http_push_stream_publisher_delete_handler(ngx_http_request_t *r);
 
 #endif /* NGX_HTTP_PUSH_STREAM_MODULE_PUBLISHER_H_ */
